objects/FSL_Account_Code__c.object
<CustomObject>
    <fields>
        <fullName>Account_Code_Description__c</fullName>
        <label>Account Code Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chrysler_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chrysler Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coverage_Type__c</fullName>
        <label>Coverage Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDS_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDS Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multi_PSN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Multiple PSN Indicator</description>
        <label>Multi PSN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pay_Code_Description__c</fullName>
        <label>Pay Code Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pay_Code__c</fullName>
        <label>Pay Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warranty</label>
        <type>Checkbox</type>
    </fields>
    <label>FSL Account Code</label>
    <nameField>
        <label>FSL Account Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL Account Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>